--- a/templates/create_tutor_profile.html
+++ b/templates/create_tutor_profile.html
@@ -66,7 +66,7 @@
             </div>
             <div class="form-group">
                 <label for="subject-select">Select Subject:</label>
-                <select class="form-control" id="subject-select" name="subject_ids" multiple>
+                <select class="form-control" id="subject-select" name="selected_subject_input" multiple>
                     {% for subject in all_subjects %}
                     <option value="{{ subject.subject_id }}">{{ subject.subject_name }}</option>
                     {% endfor %}
@@ -78,7 +78,7 @@
             <ul id="selected-subjects-list"></ul>
             
             <!-- Hidden field to store selected subjects IDs -->
-            <input type="hidden" name="subject_ids" id="selected-subjects-input">
+            <input type="hidden" name="selected_subject_ids" id="selected-subjects-input">
 
             <!-- Place this where you want to display the selected subjects -->
             <div id="selected-subjects-display">
@@ -134,15 +134,18 @@
             var schooltypeSelect = document.getElementById('schooltype-select');
             var selectedSchooltype = schooltypeSelect.options[schooltypeSelect.selectedIndex].text;
             var subjectsTableBody = document.getElementById('selected-subjects-tbody');
+            var selectedSubjectsInput = document.getElementById('selected-subjects-input');
 
-            // Add subject to table if it is selected
             if (subjectSelect.value) {
+                // Add subject to the display table
                 var row = document.createElement('tr');
                 row.innerHTML = `<td>${selectedSchooltype}</td><td>${selectedOption.text}</td>`;
                 subjectsTableBody.appendChild(row);
 
                 // Update the hidden input value
-                updateSelectedSubjectsInput();
+                var currentSubjects = selectedSubjectsInput.value ? selectedSubjectsInput.value.split(',') : [];
+                currentSubjects.push(subjectSelect.value);
+                selectedSubjectsInput.value = currentSubjects.join(',');
             }
         }
 
